Fix Sonar issues: remove commented code, unused methods/parameters, fix Optional access, merge if statements, replace Stream.collect with toList, replace Stack with Deque, fix Map.containsKey (#174)
Co-authored-by: Cursor Agent <cursoragent@cursor.com>